Add navbar to dashboard page

--- a/app/assets/stylesheets/new-age.scss
+++ b/app/assets/stylesheets/new-age.scss
@@ -113,43 +113,41 @@ body {
     color: #fdcc52;
   }
 
-  @media (min-width: 992px) {
-    #mainNav {
-      border-color: transparent;
-      background-color: transparent;
-    }
-    #mainNav .navbar-brand {
-      color: fade(white, 70%);
-    }
-    #mainNav .navbar-brand:hover, #mainNav .navbar-brand:focus {
-      color: white;
-    }
-    #mainNav .navbar-nav > li > a,
-    #mainNav .navbar-nav > li > a:focus {
-      color: rgba(255, 255, 255, 0.7);
-    }
-    #mainNav .navbar-nav > li > a:hover,
-    #mainNav .navbar-nav > li > a:focus:hover {
-      color: white;
-    }
-    #mainNav.navbar-shrink {
-      border-color: rgba(34, 34, 34, 0.1);
-      background-color: white;
-    }
-    #mainNav.navbar-shrink .navbar-brand {
-      color: #222222;
-    }
-    #mainNav.navbar-shrink .navbar-brand:hover, #mainNav.navbar-shrink .navbar-brand:focus {
-      color: #fdcc52;
-    }
-    #mainNav.navbar-shrink .navbar-nav > li > a,
-    #mainNav.navbar-shrink .navbar-nav > li > a:focus {
-      color: #222222;
-    }
-    #mainNav.navbar-shrink .navbar-nav > li > a:hover,
-    #mainNav.navbar-shrink .navbar-nav > li > a:focus:hover {
-      color: #fdcc52;
-    }
+  #mainNav {
+    border-color: transparent;
+    background-color: transparent;
+  }
+  #mainNav .navbar-brand {
+    color: fade(white, 70%);
+  }
+  #mainNav .navbar-brand:hover, #mainNav .navbar-brand:focus {
+    color: white;
+  }
+  #mainNav .navbar-nav > li > a,
+  #mainNav .navbar-nav > li > a:focus {
+    color: rgba(255, 255, 255, 0.7);
+  }
+  #mainNav .navbar-nav > li > a:hover,
+  #mainNav .navbar-nav > li > a:focus:hover {
+    color: white;
+  }
+  #mainNav.navbar-shrink {
+    border-color: rgba(34, 34, 34, 0.1);
+    background-color: white;
+  }
+  #mainNav.navbar-shrink .navbar-brand {
+    color: #222222;
+  }
+  #mainNav.navbar-shrink .navbar-brand:hover, #mainNav.navbar-shrink .navbar-brand:focus {
+    color: #fdcc52;
+  }
+  #mainNav.navbar-shrink .navbar-nav > li > a,
+  #mainNav.navbar-shrink .navbar-nav > li > a:focus {
+    color: #222222;
+  }
+  #mainNav.navbar-shrink .navbar-nav > li > a:hover,
+  #mainNav.navbar-shrink .navbar-nav > li > a:focus:hover {
+    color: #fdcc52;
   }
 
   header.masthead {
@@ -158,8 +156,8 @@ body {
     padding-top: 150px;
     padding-bottom: 100px;
     color: white;
-    background: url("../img/bg-pattern.png"), #7b4397;
-    background: url("../img/bg-pattern.png"), linear-gradient(to left, #7b4397, #dc2430);
+    background: url("/template/img/bg-pattern.png"), #7b4397;
+    background: url("/template/img/bg-pattern.png"), linear-gradient(to left, #7b4397, #dc2430);
   }
 
   header.masthead .header-content {
