--- a/app/views/shared/_profile_section.html.erb
+++ b/app/views/shared/_profile_section.html.erb
@@ -3,8 +3,7 @@
 </div>
 
 <div id="profile-section-user-template" style="display: none;">
-  <div style="max-height: 200px;">
-    <img class="w-100 h-100" data-src="{{profile_banner_url}}">
+  <div style="width: 100%; height: 200px; background-image: url({{profile_banner_url}}); background-size:  cover; ">
   </div>
   <div style="margin-top: -50px;">
     <img class="rounded-circle border shadow-sm" data-src="{{profile_image_url}}" style="min-width: 100px; width: 30%; max-width: 150px;">
