--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,3 +1,16 @@
+<div id="new-age-container">
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav" style="background-color: white;">
+    <div class="container">
+      <a class="navbar-brand" style="color: #222;" href="<%= root_path(via: 'app_name') %>"><%= t('home.index.app_name') %></a>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" style="color: #222; text-transform: none;" href="<%= dashboard_path %>">@<%= current_user.screen_name %></a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</div>
+
 <div class="container">
   <div class="mb-5">
     <%= render partial: 'shared/profile_section', locals: { user: @user } %>
