--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,24 +4,16 @@
 
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top"><%= t('.app_name') %></a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menu
-        <i class="fas fa-bars"></i>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#download">Download</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#features">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-          </li>
-        </ul>
-      </div>
+      <a class="navbar-brand" href="<%= root_path(via: 'app_name') %>"><%= t('.app_name') %></a>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <% if user_signed_in? %>
+            <a class="nav-link" href="<%= dashboard_path %>">Dashboard</a>
+          <% else %>
+            <a class="nav-link" href="<%= raw user_twitter_omniauth_authorize_path %>">Sign in</a>
+          <% end %>
+        </li>
+      </ul>
     </div>
   </nav>
 
@@ -143,23 +135,12 @@
 
   <section class="contact bg-primary" id="contact">
     <div class="container">
-      <h2>We
-        <i class="fas fa-heart"></i>
-        new friends!</h2>
+      <h2><%= t('.contact_section.title_html') %></h2>
+      <div class="mb-3"><%= t('.contact_section.text_html') %></div>
       <ul class="list-inline list-social">
         <li class="list-inline-item social-twitter">
-          <a href="#">
+          <a href="https://twitter.com/egotter_cs" target="_blank">
             <i class="fab fa-twitter"></i>
-          </a>
-        </li>
-        <li class="list-inline-item social-facebook">
-          <a href="#">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-        </li>
-        <li class="list-inline-item social-google-plus">
-          <a href="#">
-            <i class="fab fa-google-plus-g"></i>
           </a>
         </li>
       </ul>
@@ -168,7 +149,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; Your Website 2020. All Rights Reserved.</p>
+      <p>&copy; <%= t('.app_name') %> 2020. All Rights Reserved.</p>
       <ul class="list-inline">
         <li class="list-inline-item">
           <a href="#">Privacy</a>
@@ -178,6 +159,13 @@
         </li>
         <li class="list-inline-item">
           <a href="#">FAQ</a>
+        </li>
+        <li class="list-inline-item">
+          <% if user_signed_in? %>
+            <%= link_to 'Sign out', destroy_user_session_path, data: {confirm: 'Do you want to sign out?', method: :delete} %>
+          <% else %>
+            <%= link_to 'Sign in', user_twitter_omniauth_authorize_path %>
+          <% end %>
         </li>
       </ul>
     </div>
