--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,6 +1,6 @@
 <div id="new-age-container">
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav" style="background-color: white;">
-    <div class="container">
+    <div class="container border-bottom">
       <a class="navbar-brand" style="color: #222;" href="<%= root_path(via: 'app_name') %>"><%= t('home.index.app_name') %></a>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
