--- a/app/views/templates/_search_response_user_template.html.erb
+++ b/app/views/templates/_search_response_user_template.html.erb
@@ -14,7 +14,7 @@
       </div>
     </div>
 
-    <div class="mb-3">{{{description}}}</div>
+    <div class="mb-3" style="word-break: break-all;">{{{description}}}</div>
 
     <div class="mb-3">
       <div class="d-inline-block mr-3">
