--- a/app/assets/stylesheets/new-age.scss
+++ b/app/assets/stylesheets/new-age.scss
@@ -14,7 +14,7 @@ body {
   font-family: 'Muli', 'Helvetica', 'Arial', 'sans-serif';
 }
 
-#new-age-container {
+.new-age-container {
 
   a {
     color: #fdcc52;
