--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -4,7 +4,10 @@
       <a class="navbar-brand" style="color: #222;" href="<%= root_path(via: 'app_name') %>"><%= t('home.index.app_name') %></a>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" style="color: #222; text-transform: none;" href="<%= dashboard_path %>">@<%= current_user.screen_name %></a>
+          <a class="nav-link" style="color: #222; text-transform: none;" href="<%= dashboard_path(via: 'navbar') %>">
+            <img class="rounded-circle" src="<%= current_user.user_snapshot&.properties&.dig('user', 'profile_image_url') %>" width="24" height="24">
+            @<%= current_user.screen_name %>
+          </a>
         </li>
       </ul>
     </div>
