--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,11 +28,11 @@
         </div>
         <div class="col-lg-5 my-auto">
           <div class="device-container">
-            <div class="device-mockup iphone6_plus portrait white">
+            <div class="device-mockup iphone6_plus portrait black">
               <div class="device">
                 <div class="screen">
                   <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                  <img src="<%= asset_path '/template/img/demo-screen-1.jpg' %>" class="img-fluid" alt="">
+                  <img src="<%= asset_path '/template/img/demo-screen-2.png' %>" class="img-fluid" alt="">
                 </div>
                 <div class="button">
                   <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -70,11 +70,11 @@
       <div class="row">
         <div class="col-lg-4 my-auto">
           <div class="device-container">
-            <div class="device-mockup iphone6_plus portrait white">
+            <div class="device-mockup iphone6_plus portrait black">
               <div class="device">
                 <div class="screen">
                   <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                  <img src="<%= asset_path '/template/img/demo-screen-1.jpg' %>" class="img-fluid" alt="">
+                  <img src="<%= asset_path '/template/img/demo-screen-2.png' %>" class="img-fluid" alt="">
                 </div>
                 <div class="button">
                   <!-- You can hook the "home button" to some JavaScript events or just remove it -->
