--- a/app/views/shared/_profile_section.html.erb
+++ b/app/views/shared/_profile_section.html.erb
@@ -9,43 +9,49 @@
     <img class="rounded-circle border shadow-sm" data-src="{{profile_image_url}}" style="min-width: 100px; width: 30%; max-width: 150px;">
   </div>
   <div class="p-3">
-    <div class="mb-3">
-      <div><strong>{{name}}</strong></div>
+    <div class="d-flex justify-content-between mb-3">
       <div>
-        <a class="text-muted" href="https://twitter.com/{{screen_name}}" target="_blank">@{{screen_name}}</a>
+        <div><strong>{{name}}</strong></div>
+        <div><a class="text-muted" href="https://twitter.com/{{screen_name}}" target="_blank">@{{screen_name}}</a></div>
+      </div>
+      <div>
+        <button class="btn btn-outline-secondary btn-sm" type="button" data-toggle="collapse" aria-expanded="false" href=".profile-section-details"><%= t('.details') %></button>
       </div>
     </div>
-    <div class="mb-3">{{{description}}}</div>
-    <div class="mb-3">
-      <div class="d-inline-block mr-3">
-        <i class="fas fa-map-marker-alt text-muted"></i>
-        <span class="text-muted">{{location}}</span>
+
+    <div class="profile-section-details collapse">
+      <div class="small mb-3">{{{description}}}</div>
+      <div class="mb-3">
+        <div class="d-inline-block mr-3">
+          <i class="fas fa-map-marker-alt text-muted"></i>
+          <span class="text-muted">{{location}}</span>
+        </div>
+        <div class="d-inline-block">
+          <i class="fas fa-link text-muted"></i>
+          <a class="text-muted" href="{{url}}" target="_blank">
+            {{url_s}}
+          </a>
+        </div>
       </div>
-      <div class="d-inline-block">
-        <i class="fas fa-link text-muted"></i>
-        <a class="text-muted" href="{{url}}" target="_blank">
-          {{url_s}}
-        </a>
-      </div>
-    </div>
-    <div>
-      <div class="d-inline-block mr-3">
-        <a href="https://twitter.com/{{screen_name}}" target="_blank">
-          <strong class="text-body">{{statuses_count_s}}</strong>
-          <span class="text-muted"><%= t('.statuses') %></span>
-        </a>
-      </div>
-      <div class="d-inline-block mr-3">
-        <a href="https://twitter.com/{{screen_name}}/following" target="_blank">
-          <strong class="text-body">{{friends_count_s}}</strong>
-          <span class="text-muted"><%= t('.following') %></span>
-        </a>
-      </div>
-      <div class="d-inline-block">
-        <a href="https://twitter.com/{{screen_name}}/followers" target="_blank">
-          <strong class="text-body">{{followers_count_s}}</strong>
-          <span class="text-muted"><%= t('.followers') %></span>
-        </a>
+      <div>
+        <div class="d-inline-block mr-3">
+          <a href="https://twitter.com/{{screen_name}}" target="_blank">
+            <strong class="text-body">{{statuses_count_s}}</strong>
+            <span class="text-muted"><%= t('.statuses') %></span>
+          </a>
+        </div>
+        <div class="d-inline-block mr-3">
+          <a href="https://twitter.com/{{screen_name}}/following" target="_blank">
+            <strong class="text-body">{{friends_count_s}}</strong>
+            <span class="text-muted"><%= t('.following') %></span>
+          </a>
+        </div>
+        <div class="d-inline-block">
+          <a href="https://twitter.com/{{screen_name}}/followers" target="_blank">
+            <strong class="text-body">{{followers_count_s}}</strong>
+            <span class="text-muted"><%= t('.followers') %></span>
+          </a>
+        </div>
       </div>
     </div>
   </div>
