--- a/app/views/templates/_search_response_user_template.html.erb
+++ b/app/views/templates/_search_response_user_template.html.erb
@@ -1,5 +1,5 @@
 <div id="search-response-user-template" style="display: none;">
-  <div class="border mb-5 p-3">
+  <div class="border rounded mb-3 pt-3 px-3">
     <div class="d-flex mb-3">
       <div class="mr-3">
         <a href="https://twitter.com/{{screen_name}}" target="_blank">
@@ -15,39 +15,41 @@
       </div>
     </div>
 
-    <div class="mb-3" style="word-break: break-all;">{{{description}}}</div>
+    <div class="small mb-3" style="word-break: break-all;">{{{description}}}</div>
 
-    <div class="mb-3">
-      <div class="d-inline-block mr-3">
-        <i class="fas fa-map-marker-alt text-muted"></i>
-        <span class="text-muted">{{location}}</span>
+    <div class="search-response-user-details">
+      <div class="mb-3">
+        <div class="d-inline-block mr-3">
+          <i class="fas fa-map-marker-alt text-muted"></i>
+          <span class="text-muted">{{location}}</span>
+        </div>
+        <div class="d-inline-block">
+          <i class="fas fa-link text-muted"></i>
+          <a class="text-muted" href="{{url}}" target="_blank">
+            {{url_s}}
+          </a>
+        </div>
       </div>
-      <div class="d-inline-block">
-        <i class="fas fa-link text-muted"></i>
-        <a class="text-muted" href="{{url}}" target="_blank">
-          {{url_s}}
-        </a>
-      </div>
-    </div>
 
-    <div>
-      <div class="d-inline-block mr-3">
-        <a href="https://twitter.com/{{screen_name}}" target="_blank">
-          <strong class="text-body">{{statuses_count_s}}</strong>
-          <span class="text-muted"><%= t('.statuses') %></span>
-        </a>
-      </div>
-      <div class="d-inline-block mr-3">
-        <a href="https://twitter.com/{{screen_name}}/following" target="_blank">
-          <strong class="text-body">{{friends_count_s}}</strong>
-          <span class="text-muted"><%= t('.following') %></span>
-        </a>
-      </div>
-      <div class="d-inline-block">
-        <a href="https://twitter.com/{{screen_name}}/followers" target="_blank">
-          <strong class="text-body">{{followers_count_s}}</strong>
-          <span class="text-muted"><%= t('.followers') %></span>
-        </a>
+      <div>
+        <div class="d-inline-block mr-3 mb-3">
+          <a href="https://twitter.com/{{screen_name}}" target="_blank">
+            <strong class="text-body">{{statuses_count_s}}</strong>
+            <span class="text-muted"><%= t('.statuses') %></span>
+          </a>
+        </div>
+        <div class="d-inline-block mr-3">
+          <a href="https://twitter.com/{{screen_name}}/following" target="_blank">
+            <strong class="text-body">{{friends_count_s}}</strong>
+            <span class="text-muted"><%= t('.following') %></span>
+          </a>
+        </div>
+        <div class="d-inline-block">
+          <a href="https://twitter.com/{{screen_name}}/followers" target="_blank">
+            <strong class="text-body">{{followers_count_s}}</strong>
+            <span class="text-muted"><%= t('.followers') %></span>
+          </a>
+        </div>
       </div>
     </div>
   </div>
