--- a/app/views/shared/_profile_section.html.erb
+++ b/app/views/shared/_profile_section.html.erb
@@ -8,7 +8,7 @@
   <div style="margin-top: -50px;">
     <img class="rounded-circle border shadow-sm" data-src="{{profile_image_url}}" style="min-width: 100px; width: 30%; max-width: 150px;">
   </div>
-  <div class="p-3">
+  <div class="pt-3 px-3">
     <div class="d-flex justify-content-between mb-3">
       <div>
         <div><strong>{{name}}</strong></div>
@@ -33,7 +33,7 @@
           </a>
         </div>
       </div>
-      <div>
+      <div class="mb-3">
         <div class="d-inline-block mr-3">
           <a href="https://twitter.com/{{screen_name}}" target="_blank">
             <strong class="text-body">{{statuses_count_s}}</strong>
