--- a/app/views/templates/_search_response_user_template.html.erb
+++ b/app/views/templates/_search_response_user_template.html.erb
@@ -10,7 +10,7 @@
         <div><strong>{{name}}</strong></div>
         <div>
           <a class="text-muted" href="https://twitter.com/{{screen_name}}" target="_blank">@{{screen_name}}</a>
-          {{{labels}}}
+          <div class="small">{{{labels}}}</div>
         </div>
       </div>
     </div>
