--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,10 +1,10 @@
 <div class="new-age-container">
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav" style="background-color: white;">
     <div class="container border-bottom">
-      <a class="navbar-brand" style="color: #222;" href="<%= root_path(via: 'app_name') %>"><%= t('home.index.app_name') %></a>
+      <a class="navbar-brand" style="color: #222;" href="#" data-toggle="modal" data-target="#support-modal"><%= t('home.index.app_name') %></a>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" style="color: #222; text-transform: none;" href="<%= dashboard_path(via: 'navbar') %>">
+          <a class="nav-link" style="color: #222; text-transform: none;" href="#" data-toggle="modal" data-target="#support-modal">
             <img class="rounded-circle" src="<%= current_user.user_snapshot&.properties&.dig('user', 'profile_image_url') %>" width="24" height="24">
             @<%= current_user.screen_name %>
           </a>
@@ -13,6 +13,8 @@
     </div>
   </nav>
 </div>
+
+<%= render partial: 'shared/support_modal' %>
 
 <div class="container">
   <div class="mb-5">
